--- a/index.html
+++ b/index.html
@@ -4,15 +4,70 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title></title>
-        <link rel="stylesheet" href="styles/css/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="styles/css/bootstrap-utilities.css" />
+        <link rel="stylesheet" href="styles/css/bootstrap.min.css" />
         <link rel="stylesheet" href="styles/css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <div class="container-fluid"></div>
+        <div class="container-fluid">
+            <header class="d-flex flex-column d-xl-flex align-items-center gap-3">
+                <div class="logo">
+                    <span class="">Shayna</span>
+                </div>
+                <nav>
+                    <ul class="d-flex flex-column align-items-center align-self-center">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Start</a>
+                        </li>
+                        <li>
+                            <a href="#">Browse</a>
+                        </li>
+                        <li>
+                            <a href="#">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#">Story</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="sign-in-btn" href="#">Sign In</a>
+            </header>
+
+            <main class="hero mt-5 position-relative">
+                <div class="hero-description">
+                    <h1 class="text-center text-lg-start">
+                        Learn UI Design <br class="d-sm-none d-lg-block" />
+                        From The Real Expert
+                    </h1>
+                    <p class="mt-3 text-center text-lg-start">
+                        Stop wasting time browsing around and start learning from our designers for your better career
+                    </p>
+                    <a href="#" class="hero-btn mt-4">Get Started</a>
+                </div>
+                <div class="hero-person mt-5 position-relative">
+                    <img src="./assets/img/hero.png" alt="" class="img-fluid main-img" />
+                    <div class="play-btn-img-wrapper d-flex justify-content-center align-items-center">
+                        <img src="./assets/img/polygon.svg" alt="" />
+                    </div>
+                    <div class="about-card">
+                        <h4>Corellina Xo</h4>
+                        <p>UI Designer</p>
+                        <div class="stars">
+                            <img src="./assets/img/star.svg" alt="" />
+                            <img src="./assets/img/star.svg" alt="" />
+                            <img src="./assets/img/star.svg" alt="" />
+                            <img src="./assets/img/star.svg" alt="" />
+                            <img src="./assets/img/star.svg" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
 
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
