--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <div class="container-fluid">
-            <header class="d-flex justify-content-between align-items-lg-center">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary order-lg-2">
+        <div class="container-fluid px-xxl-0">
+            <header class="d-flex justify-content-between align-items-md-center">
+                <nav class="navbar navbar-expand-md bg-body-tertiary order-md-2">
                     <div class="container-fluid">
                         <button
                             class="navbar-toggler"
@@ -27,31 +27,31 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item d-lg-none">
+                            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                                <li class="nav-item d-md-none">
                                     <a class="nav-link" href="#">Sign In</a>
                                 </li>
                                 <li class="nav-item px-lg-4">
-                                    <a class="nav-link py-lg-0 px-lg-1" href="#">Home</a>
+                                    <a class="nav-link py-md-0 px-lg-1" href="#">Home</a>
                                 </li>
                                 <li class="nav-item px-lg-4">
-                                    <a class="nav-link py-lg-0 px-lg-1" href="#">Start</a>
+                                    <a class="nav-link py-md-0 px-lg-1" href="#">Start</a>
                                 </li>
                                 <li class="nav-item px-lg-4">
-                                    <a class="nav-link py-lg-0 px-lg-1" href="#">Browse</a>
+                                    <a class="nav-link py-md-0 px-lg-1" href="#">Browse</a>
                                 </li>
                                 <li class="nav-item px-lg-4">
-                                    <a class="nav-link py-lg-0 px-lg-1" href="#">Pricing</a>
+                                    <a class="nav-link py-md-0 px-lg-1" href="#">Pricing</a>
                                 </li>
                                 <li class="nav-item px-lg-4">
-                                    <a class="nav-link py-lg-0 px-lg-1" href="#">Story</a>
+                                    <a class="nav-link py-md-0 px-lg-1" href="#">Story</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <a class="sign-in-btn order-lg-3 d-none d-lg-block" href="#">Sign In</a>
-                <div class="logo order-lg-1">
+                <a class="sign-in-btn order-md-3 d-none d-md-block" href="#">Sign In</a>
+                <div class="logo order-md-1">
                     <span>Shayna</span>
                 </div>
             </header>
