--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
                 </div>
             </header>
 
-            <main class="hero mt-5 position-relative">
+            <main class="hero position-relative d-lg-flex align-items-center justify-content-between">
                 <div class="hero-description">
                     <h1 class="text-center text-lg-start">
                         Learn UI Design <br class="d-sm-none d-lg-block" />
                         From The Real Expert
                     </h1>
-                    <p class="mt-3 text-center text-lg-start">
+                    <p class="text-center text-lg-start">
                         Stop wasting time browsing around and start learning from our designers for your better career
                     </p>
-                    <a href="#" class="hero-btn mt-4">Get Started</a>
+                    <a href="#" class="hero-btn">Get Started</a>
                 </div>
-                <div class="hero-person mt-5 position-relative">
+                <div class="hero-person position-relative">
                     <img src="./assets/img/hero.png" alt="" class="img-fluid main-img" />
                     <div class="play-btn-img-wrapper d-flex justify-content-center align-items-center">
                         <img src="./assets/img/polygon.svg" alt="" />
@@ -85,6 +85,17 @@
                     </div>
                 </div>
             </main>
+
+            <section class="trusted-by mx-auto">
+                <h3 class="text-center">Trusted by Global Companies</h3>
+                <div class="companies row g-4 gy-lg-0 justify-content-between">
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/apple-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/adobe-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/slack-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/spotify-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/google-icon.svg" alt="" />
+                </div>
+            </section>
         </div>
 
         <script src="js/bootstrap.bundle.min.js"></script>
