--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             <section class="trusted-by mx-auto">
                 <h3 class="text-center">Trusted by Global Companies</h3>
                 <div class="companies row g-4 gy-lg-0 justify-content-between">
-                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/apple-icon.svg" alt="" />
-                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/adobe-icon.svg" alt="" />
-                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/slack-icon.svg" alt="" />
-                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/spotify-icon.svg" alt="" />
-                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="/assets/img/google-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/apple-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/adobe-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/slack-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/spotify-icon.svg" alt="" />
+                    <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/google-icon.svg" alt="" />
                 </div>
             </section>
         </div>
