finish team section, refactor typography css, minor tweaks

--- a/index.html
+++ b/index.html
@@ -87,13 +87,56 @@
             </main>
 
             <section class="trusted-by mx-auto">
-                <h3 class="text-center">Trusted by Global Companies</h3>
+                <h4 class="text-center">Trusted by Global Companies</h4>
                 <div class="companies row g-4 gy-lg-0 justify-content-between">
                     <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/apple-icon.svg" alt="" />
                     <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/adobe-icon.svg" alt="" />
                     <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/slack-icon.svg" alt="" />
                     <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/spotify-icon.svg" alt="" />
                     <img class="col-6 col-sm-4 col-md-3 col-lg-2" src="./assets/img/google-icon.svg" alt="" />
+                </div>
+            </section>
+
+            <section class="team">
+                <p class="text-center">Grow Today</p>
+                <h2 class="text-center">Start Your <span class="underline">Career</span></h2>
+                <div class="cards row justify-content-center">
+                    <div class="card col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card-img">
+                            <img class="img-fluid" src="./assets/img/image-1.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            <h4>Aisayah</h4>
+                            <p>I teach how to start UX</p>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card-img">
+                            <img class="img-fluid" src="./assets/img/image-2.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            <h4>Angga</h4>
+                            <p>I teach how to design test</p>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card-img">
+                            <img class="img-fluid" src="./assets/img/image-3.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            <h4>Mabdul</h4>
+                            <p>I teach how to asses design</p>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card-img">
+                            <img class="img-fluid" src="./assets/img/image-4.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            <h4>Wo You</h4>
+                            <p>I teach how to do icons</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
