--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </head>
     <body>
         <div class="container-fluid px-xxl-0">
+            <img class="lines" src="./assets/img/lines.svg" alt="" />
+
             <header class="d-flex justify-content-between align-items-md-center">
                 <nav class="navbar navbar-expand-md bg-body-tertiary order-md-2">
                     <div class="container-fluid">
