tweak background lines

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <div class="container-fluid px-xxl-0">
+        <div class="container-fluid px-xxl-0 position-relative">
             <img class="lines" src="./assets/img/lines.svg" alt="" />
 
             <header class="d-flex justify-content-between align-items-md-center">
